# ai-sdk-rs

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: models_dev_client_example.rs  models_dev_complete_integration.rs  models_dev_convenience_example.rs  models_dev_registry_example.rs  openai_models_dev_integration.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: error.rs  lib.rs  prompt.rs
src/core/: generate_stream.rs  generate_text.rs  language_model.rs  messages.rs  mod.rs  tools.rs  types.rs  utils.rs
src/core/language_model/: generate_text.rs  mod.rs  request.rs  stream_text.rs
src/core/types/: messages.rs  mod.rs  options.rs  responses.rs
src/models_dev/: client.rs  convenience.rs  error.rs  mod.rs  registry.rs  traits.rs  types.rs
src/providers/: mod.rs  options.toml
src/providers/anthropic/: conversions.rs  mod.rs
src/providers/google/: conversions.rs  mod.rs  settings.rs
src/providers/openai/: conversions.rs  mod.rs  settings.rs
src/providers/openai/models/: gpt-4o.toml  o1-mini.toml
tests/: google_provider_integration_tests.rs  models_dev_client_tests.rs  models_dev_data_structures_tests.rs  models_dev_integration_tests.rs  models_dev_registry_tests.rs  openai_models_dev_aware_tests.rs  openai_provider_integration_tests.rs
