[package]
name = "aisdk"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "An open-source Rust library for building AI-powered applications, inspired by the Vercel AI SDK. It provides a robust, type-safe, and easy-to-use interface for interacting with various Large Language Models (LLMs)."
homepage = "https://github.com/lazy-hq/ai-sdk-rs"
repository = "https://github.com/lazy-hq/ai-sdk-rs"
readme = "README.md"
keywords = ["ai", "sdk", "aisdk", "ai-sdk-rs", "openai"]
categories = ["api-bindings", "asynchronous"]

[features]
full = ["openai", "models-dev"]
openai = ["async-openai"]
models-dev = ["reqwest", "dirs", "tokio"]

[[test]]
name = "openai_provider_integration_tests"
required-features = ["openai"]

[[test]]
name = "models_dev_data_structures_tests"
required-features = ["models-dev"]

[[test]]
name = "models_dev_registry_tests"
required-features = ["models-dev"]

[[test]]
name = "models_dev_integration_tests"
required-features = ["models-dev"]

[[test]]
name = "openai_models_dev_aware_tests"
required-features = ["openai", "models-dev"]

[dependencies]
tera = "1"
once_cell = "1.19.0"
log = "0.4"
async-trait = "0.1.88"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = { version = "1.0" }
thiserror = "2.0.12"
derive_builder = "0.20.2"
futures = "0.3"
async-openai = { version = "0.29.3", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
dirs = { version = "5.0", optional = true }
tokio = { version = "1.0", features = ["fs", "sync", "time"], optional = true }

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
dotenv = "0.15.0"
tokio = { version = "1.46.1", features = ["full"]}
tempfile = "3.10.1"
